# Prehnite

./: .gitignore  .mcp.json  README.md  pyproject.toml
docker/: base.Dockerfile
docs/devlog/: 0001-mcp-wired-and-driven.md  0002-distinguish-no-agent-activity.md  0003-mypy-clean.md  0004-sandbox-exec-tests.md  0005-three-task-shapes.md  0006-agent-thoughts.md  0007-task-tags-and-describe.md  0008-network-policy.md  0009-egress-allowlist-example.md  0010-inspect-cli.md  0011-stats-cli.md  0012-per-exec-timeout.md  0013-batch-runner.md  0014-stats-richer-metrics.md  0015-batch-richer.md  0016-compare-cli.md  0017-session-persistence.md  0018-container-reaper.md  0019-read-trajectory-tool.md  0020-fork-revert.md  0021-branch-aware-reads.md  0022-fix-circular-import-task.md  0023-output-truncation.md
src/prehnite/: __init__.py  cli.py  egress_proxy.py  mcp_server.py  overflow.py  runner.py  sandbox.py  schemas.py  trajectory.py
src/prehnite/tasks/: loader.py
tasks/examples/: egress_allowlist.yaml  fix_circular_import.yaml  fix_log_stats.yaml  fix_off_by_one.yaml  hello.yaml  install_cowsay.yaml  merge_configs.yaml
tests/: test_cli_batch.py  test_cli_compare.py  test_cli_inspect.py  test_cli_reap.py  test_cli_stats.py  test_egress_proxy.py  test_loader.py  test_mcp_server.py  test_overflow.py  test_runner.py  test_sandbox.py  test_sandbox_exec.py  test_schemas.py  test_trajectory.py
